--- a/food-crossroads/package.json
+++ b/food-crossroads/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-script": "^2.0.5",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-sticky": "^6.0.3",
     "switch": "0.0.0",
     "web-vitals": "^2.1.4"
