--- a/food-crossroads/package.json
+++ b/food-crossroads/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-script": "^2.0.5",
